# AltQuant

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
altquant/simulator/: trade_index.py
requirements/: requirements_dev.txt
tests/: test_trade_index.py
